--- a/artikel.html
+++ b/artikel.html
@@ -79,7 +79,7 @@
             <div class="artikel_terbaru">
                 <h2>Artikel Terbaru</h2>
                 <div class="row">
-                    <div class="col-md-3 col-sm-12">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <img src="assets/img/artikel_terbaru_1.png" alt="" class="img img-fluid art_ter_1">
                         <div class="desc">
                             <a href="detail-artikel.html" class="btn btn-success">Terbaru</a>
@@ -87,7 +87,7 @@
                             <small class="date"><i class="fas fa-calendar-alt mr-2" style="margin-top: 0px;"></i> Ahad, 21-01-2020</small>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <img src="assets/img/artikel_terbaru_2.png" alt="" class="img img-fluid art_ter_2">
                         <div class="desc">
                             <a href="detail-artikel.html" class="btn btn-success">Terbaru</a>
@@ -95,7 +95,7 @@
                             <small class="date"><i class="fas fa-calendar-alt mr-2" style="margin-top: 60px;"></i> Ahad, 21-01-2020</small>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <img src="assets/img/artikel_terbaru_3.png" alt="" class="img img-fluid art_ter_3">
                         <div class="desc">
                             <a href="detail-artikel.html" class="btn btn-success">Terbaru</a>
@@ -103,7 +103,7 @@
                             <small class="date"><i class="fas fa-calendar-alt mr-2" style="margin-top: 30px;"></i> Ahad, 21-01-2020</small>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <img src="assets/img/artikel_terbaru_4.png" alt="" class="img img-fluid art_ter_4">
                         <div class="desc">
                             <a href="detail-artikel.html" class="btn btn-success">Terbaru</a>
@@ -126,7 +126,7 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -140,7 +140,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_2.png" class="mr-3 img-fluid" alt="...">
@@ -156,7 +156,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -170,7 +170,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_4.png" class="mr-3 img-fluid" alt="...">
@@ -200,7 +200,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -218,7 +218,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -232,7 +232,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_2.png" class="mr-3 img-fluid" alt="...">
@@ -248,7 +248,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -262,7 +262,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -278,7 +278,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_4.png" class="mr-3 img-fluid" alt="...">
@@ -292,7 +292,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -310,7 +310,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -324,7 +324,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_2.png" class="mr-3 img-fluid" alt="...">
@@ -340,7 +340,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -354,7 +354,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -370,7 +370,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_4.png" class="mr-3 img-fluid" alt="...">
@@ -384,7 +384,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -403,7 +403,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -417,7 +417,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_2.png" class="mr-3 img-fluid" alt="...">
@@ -433,7 +433,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -447,7 +447,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -463,7 +463,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_4.png" class="mr-3 img-fluid" alt="...">
@@ -477,7 +477,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -496,7 +496,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -510,7 +510,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_2.png" class="mr-3 img-fluid" alt="...">
@@ -526,7 +526,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
@@ -540,7 +540,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
@@ -556,7 +556,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_4.png" class="mr-3 img-fluid" alt="...">
@@ -570,7 +570,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
                                         <img src="assets/img/artikel_menarik_3.png" class="mr-3 img-fluid" alt="...">
