--- a/contact.html
+++ b/contact.html
@@ -81,11 +81,11 @@
                 <form action="/action_page.php">
                     <div class="form-group">
                         <label for="name">Nama</label>
-                        <input type="text" class="form-control" id="name" value="Kadita Suryaningsih" style="width: 380px;">
+                        <input type="text" class="form-control" id="name" value="Kadita Suryaningsih">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="text" class="form-control" id="email" value="ningkadita@gmai" style="width: 380px;">
+                        <input type="text" class="form-control" id="email" value="ningkadita@gmai">
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Pertanyaan</label>
