--- a/galeri.html
+++ b/galeri.html
@@ -80,10 +80,19 @@
         <div class="container">
             <h2>Galeri Mi At - Taqwa</h2>
             <div class="row">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 img">
                     <img src="assets/img/gal1.png" alt="" class="img-fluid galeri1">
+                    <div class="youtube">
+                        <a href="https://youtu.be/jsnUVV9rtjM" data-fancybox>
+                            <img src="assets/img/play.png" alt="" class="img-fluid"/>
+                        </a>
+                    </div>
+                    <div class="desc">
+                        <p class="text-muted date">Ahad, 21-01-2020</p>
+                        <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
+                    </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 img-2">
                     <div class="overlay-slide">
                         <img src="assets/img/gal2.png" alt="" class="img-fluid galeri2">
                         <div class="desc">
@@ -153,8 +162,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-md-6 col-sm-12 img">
                                 <img src="assets/img/gal1.png" alt="" class="img-fluid galeri1">
+                                <div class="youtube">
+                                    <a href="https://youtu.be/jsnUVV9rtjM" data-fancybox>
+                                        <img src="assets/img/play.png" alt="" class="img-fluid"/>
+                                    </a>
+                                </div>
+                                <div class="desc">
+                                    <p class="text-muted date">Ahad, 21-01-2020</p>
+                                    <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -189,8 +207,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-md-6 col-sm-12 img">
                                 <img src="assets/img/gal1.png" alt="" class="img-fluid galeri1">
+                                <div class="youtube">
+                                    <a href="https://youtu.be/jsnUVV9rtjM" data-fancybox>
+                                        <img src="assets/img/play.png" alt="" class="img-fluid"/>
+                                    </a>
+                                </div>
+                                <div class="desc">
+                                    <p class="text-muted date">Ahad, 21-01-2020</p>
+                                    <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -225,8 +252,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-md-6 col-sm-12 img">
                                 <img src="assets/img/gal1.png" alt="" class="img-fluid galeri1">
+                                <div class="youtube">
+                                    <a href="https://youtu.be/jsnUVV9rtjM" data-fancybox>
+                                        <img src="assets/img/play.png" alt="" class="img-fluid"/>
+                                    </a>
+                                </div>
+                                <div class="desc">
+                                    <p class="text-muted date">Ahad, 21-01-2020</p>
+                                    <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -261,8 +297,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-md-6 col-sm-12 img">
                                 <img src="assets/img/gal1.png" alt="" class="img-fluid galeri1">
+                                <div class="youtube">
+                                    <a href="https://youtu.be/jsnUVV9rtjM" data-fancybox>
+                                        <img src="assets/img/play.png" alt="" class="img-fluid"/>
+                                    </a>
+                                </div>
+                                <div class="desc">
+                                    <p class="text-muted date">Ahad, 21-01-2020</p>
+                                    <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -297,8 +342,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-md-6 col-sm-12 img">
                                 <img src="assets/img/gal1.png" alt="" class="img-fluid galeri1">
+                                <div class="youtube">
+                                    <a href="https://youtu.be/jsnUVV9rtjM" data-fancybox>
+                                        <img src="assets/img/play.png" alt="" class="img-fluid"/>
+                                    </a>
+                                </div>
+                                <div class="desc">
+                                    <p class="text-muted date">Ahad, 21-01-2020</p>
+                                    <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
