--- a/index.html
+++ b/index.html
@@ -75,24 +75,32 @@
 
     <!-- hero -->
     <section class="hero" id="hero">
-        <div class="container">
-            <div class="my-slider">
-                <div class="hero-body">
-                    <h2>Their Favourite Choice in Bondowoso</h2>
-                    <p>Menyelenggarakan pendidikan dan pembelajaran yang berorientasi pada terbentuknya peserta didik yang beriman, bertaqwa, dan berakhlaq mulia atas dasar nilai-nilai Islam ala Ahlus Sunnah Wal Jama’ah an Nahdliyah</p>
-                    <a href="#" class="btn btn-success">Ayo Gabung <i class="fa fa-arrow-right"></i> </a>
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3">
+                <img src="assets/img/Group 764.png" alt="" class="img-fluid bg-cewek">
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="my-slider">
+                    <div class="hero-body">
+                        <h2>Their Favourite Choice in Bondowoso</h2>
+                        <p>Menyelenggarakan pendidikan dan pembelajaran yang berorientasi pada terbentuknya peserta didik yang beriman, bertaqwa, dan berakhlaq mulia atas dasar nilai-nilai Islam ala Ahlus Sunnah Wal Jama’ah an Nahdliyah</p>
+                        <a href="#" class="btn btn-success">Ayo Gabung <i class="fa fa-arrow-right"></i> </a>
+                    </div>
+                    <div class="hero-body">
+                        <h2>Their Favourite Choice in Bondowoso</h2>
+                        <p>Menyelenggarakan pendidikan dan pembelajaran yang berorientasi pada terbentuknya peserta didik yang beriman, bertaqwa, dan berakhlaq mulia atas dasar nilai-nilai Islam ala Ahlus Sunnah Wal Jama’ah an Nahdliyah</p>
+                        <a href="#" class="btn btn-success">Ayo Gabung <i class="fa fa-arrow-right"></i> </a>
+                    </div>
+                    <div class="hero-body">
+                        <h2>Their Favourite Choice in Bondowoso</h2>
+                        <p>Menyelenggarakan pendidikan dan pembelajaran yang berorientasi pada terbentuknya peserta didik yang beriman, bertaqwa, dan berakhlaq mulia atas dasar nilai-nilai Islam ala Ahlus Sunnah Wal Jama’ah an Nahdliyah</p>
+                        <a href="#" class="btn btn-success">Ayo Gabung <i class="fa fa-arrow-right"></i> </a>
+                    </div>
+                    
                 </div>
-                <div class="hero-body">
-                    <h2>Their Favourite Choice in Bondowoso</h2>
-                    <p>Menyelenggarakan pendidikan dan pembelajaran yang berorientasi pada terbentuknya peserta didik yang beriman, bertaqwa, dan berakhlaq mulia atas dasar nilai-nilai Islam ala Ahlus Sunnah Wal Jama’ah an Nahdliyah</p>
-                    <a href="#" class="btn btn-success">Ayo Gabung <i class="fa fa-arrow-right"></i> </a>
-                </div>
-                <div class="hero-body">
-                    <h2>Their Favourite Choice in Bondowoso</h2>
-                    <p>Menyelenggarakan pendidikan dan pembelajaran yang berorientasi pada terbentuknya peserta didik yang beriman, bertaqwa, dan berakhlaq mulia atas dasar nilai-nilai Islam ala Ahlus Sunnah Wal Jama’ah an Nahdliyah</p>
-                    <a href="#" class="btn btn-success">Ayo Gabung <i class="fa fa-arrow-right"></i> </a>
-                </div>
-                
+            </div>
+            <div class=" col-lg-3 col-md-3 col-sm-3">
+                <img src="assets/img/Group 763.png" alt="" class="img-fluid bg-cowok">
             </div>
         </div>
     </section>
