--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,13 @@
 
     <!-- kontak -->
     <section class="kontak" id="kontak">
-        <div class="container">
-            <h2>Kontak Kami</h2>
-            <p>Kontak kami untuk informasi lebih lanjut.</p>
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3">
+                <img src="assets/img/Group 764.png" alt="" class="img-fluid bg-cewek">
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 kontak">
+                <h2>Kontak Kami</h2>
+                <p>Kontak kami untuk informasi lebih lanjut.</p>
                 <form action="/action_page.php">
                     <div class="form-group">
                         <label for="name">Nama</label>
@@ -93,6 +97,10 @@
                     </div>
                 </form>
                 <a href="#" class="btn btn-success btn-block">Kirim</a>
+            </div>
+            <div class=" col-lg-3 col-md-3 col-sm-3">
+                <img src="assets/img/Group 763.png" alt="" class="img-fluid bg-cowok">
+            </div>
         </div>
     </section>
 
