--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="hero" id="hero">
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3">
-                <img src="assets/img/Group 764.png" alt="" class="img-fluid bg-cewek">
+                <img src="assets/img/bg-cewek.png" alt="" class="img-fluid bg-cewek">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="my-slider">
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class=" col-lg-3 col-md-3 col-sm-3">
-                <img src="assets/img/Group 763.png" alt="" class="img-fluid bg-cowok">
+                <img src="assets/img/bg-cowok.png" alt="" class="img-fluid bg-cowok">
             </div>
         </div>
     </section>
