--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
     <section class="kontak" id="kontak">
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3">
-                <img src="assets/img/Group 764.png" alt="" class="img-fluid bg-cewek">
+                <img src="assets/img/bg-cewek.png" alt="" class="img-fluid bg-cewek">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 kontak">
                 <h2>Kontak Kami</h2>
@@ -99,7 +99,7 @@
                 <a href="#" class="btn btn-success btn-block">Kirim</a>
             </div>
             <div class=" col-lg-3 col-md-3 col-sm-3">
-                <img src="assets/img/Group 763.png" alt="" class="img-fluid bg-cowok">
+                <img src="assets/img/bg-cowok.png" alt="" class="img-fluid bg-cowok">
             </div>
         </div>
     </section>
